--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
-<head>Welcome to demo version1 of the home page</head>
+<head>Welcome to demo version2 of the home page</head>
 <body>
-Our application to show code pipeline is working (Integration of Exp1 and Exp2: Prof sagar more
+Our application to show code pipeline is working rightly (Integration of Exp1 and Exp2: Prof sagar more
 </body>
 </html>
